Fixing sidenav on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
